changed some designs and added some designs

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="content">
         <div class="text-with-ball">
-            <img src="./assets/img/football.png" alt="Football" class="football">
+            <img src="./assets/img/basketbol.png" alt="Basketbol" class="basketbol">
             <p class="animated-text">Welcome to My Seatwork 3. Pick one of these two options.</p>
         </div>
         <div class="button-container">
@@ -19,8 +19,8 @@
             <a href="./pages/footer-gallery/index.html" class="styled-button">Footer</a>
         </div>
         <div class="animation-container">
-            <img src="./assets/img/football.png" alt="Football" class="animated-football">
-            <img src="./assets/img/goalpost.png" alt="Goal" class="goal-post">
+            <img src="./assets/img/basketbol.png" alt="Basketbol" class="animated-basketbol">
+            <img src="./assets/img/basketbol ring.png" alt="Basketbol Ring" class="basketbol-ring">
         </div>
     </div>
 </body>
