--- a/pages/header-gallery/index.html
+++ b/pages/header-gallery/index.html
@@ -22,7 +22,7 @@
 
     <header class="header-2">
         <h1>Static Header 2</h1>
-        <img src="./assets/img/chelseaFC.png" alt="Logo" class="logo">
+        <img src="./assets/img/OKC-Logo.png" alt="Logo" class="logo">
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
@@ -86,7 +86,7 @@
     <header class="header-animated-2">
         <h1>Animated Header 2</h1>
         <div class="logo">
-            <img src="./assets/img/manU.png" alt="Logo">
+            <img src="./assets/img/GSW-Logo.png" alt="Logo">
         </div>
         <nav>
             <ul>
