Changed paragraph text

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="content">
         <div class="text-with-ball">
             <img src="./assets/img/basketbol.png" alt="Football" class="football">
-            <p class="animated-text">Welcome to My Seatwork 3. Pick one of these two options.</p>
+            <p class="animated-text">This is my Seatwork 3 (Header & Footer). Choose between the two choices.</p>
         </div>
         <div class="button-container">
             <a href="./pages/header-gallery/index.html" class="styled-button">Header</a>
