docs(READ); answer guide questions

--- a/index.html
+++ b/index.html
@@ -2,26 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Seatwork 3 Header and Footer</title>
+    <title>HEADERS & FOOTERS - Seatwork 3</title>
     <link rel="stylesheet" href="./assets/css/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Lobster&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="content">
-        <div class="text-with-ball">
-            <img src="./assets/img/basketbol.png" alt="Football" class="football">
-            <p class="animated-text">This is my Seatwork 3 (Header & Footer). Choose between the two choices.</p>
-        </div>
-        <div class="button-container">
-            <a href="./pages/header-gallery/index.html" class="styled-button">Header</a>
-            <a href="./pages/footer-gallery/index.html" class="styled-button">Footer</a>
-        </div>
-        <div class="animation-container">
-            <img src="./assets/img/basketbol.png" alt="Football" class="animated-football">
-            <img src="./assets/img/basketbol ring.png" alt="Goal" class="goal-post">
-        </div>
-    </div>
+
+<div class="container">
+    <h1>Seatwork 3</h1>
+    <h2>Header and Footer</h2>
+    <p>A collection of header and footer designs, featuring 5 examples each of static and dynamic headers, as well as 5 examples each of static and dynamic footers.</p>
+<div class="buttons">
+    <a href="./pages/header-gallery/index.html" class="btn">View Headers</a>
+    <a href="./pages/footer-gallery/index.html" class="btn">View Footers</a>
+
+</div>
+</div>
 </body>
 </html>
