--- a/pages/footer-gallery/index.html
+++ b/pages/footer-gallery/index.html
@@ -3,147 +3,317 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Footer Designs</title>
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <a href="../../index.html" class="go-back-link"> <- Go Back </a>
+    <title>footer gallery</title>
+    <link rel="stylesheet" href="../footer-gallery/assets/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 </head>
 <body>
-    <!-- Static Footer 1 -->
-    <footer class="footer-1">
-        <p>&copy; 2024 My Company</p>
-        <nav>
+    <div class="header-page">
+        <h1>Static Footer Designs</h1>
+        <a href="../../index.html">Home</a>
+    </div>
+  <h1>Design 1</h1>
+  <h2>Composition of Social Media Icons & 5 Navigations</h2>
+  <footer class="footer-1">
+    <div class="footer-content">
+        <h2>Follow Us</h2>
+        <div class="d1">
             <ul>
-                <li><a href="#">Privacy Policy</a></li>
-                <li><a href="#">Terms of Service</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </nav>
-    </footer>
-
-    <!-- Static Footer 2 -->
-    <footer class="footer-2">
-        <div class="container">
-            <div class="left">
-                <p>&copy; 2024 My Company</p>
-            </div>
-            <div class="right">
-                <nav>
-                    <ul>
-                        <li><a href="#">Facebook</a></li>
-                        <li><a href="#">Twitter</a></li>
-                        <li><a href="#">Instagram</a></li>
-                    </ul>
-                </nav>
-            </div>
+                <li>
+                  <a href="#">
+                    <i class="fab fa-facebook-f icon"></i>    </a>
+                </li>
+                <li>
+                  <a href="#"><i class="fab fa-twitter icon"></i></a>
+                </li>
+                <li>
+                  <a href="#"><i class="fab fa-linkedin-in icon"></i></a></li>
+                <li>
+                  <a href="#"><i class="fab fa-google-plus-g icon"></i></a></li>
+              </ul>
         </div>
-    </footer>
+    </div>
+    <nav class="navbar-footer">
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Products</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </nav>
+</footer>
 
-    <!-- Static Footer 3 -->
-    <footer class="footer-3">
-        <p>&copy; 2024 My Company | All Rights Reserved</p>
-    </footer>
+<h1>Design 2</h1>
+<h2>Composition of Description, Social Media Icons & Call to Action</h2>
+<footer class="footer-6">
+    <div class="footer-content">
+        <h2>Get in Touch</h2>
+        <p>Feel free to contact us for any inquiries.</p>
+    </div>
+    <div class="cta-buttons">
+        <a href="#" class="btn btn-primary">Subscribe</a>
+        <a href="#" class="btn btn-secondary">Shop Now</a>
+    </div>
+    <div class="social-media">
+        <a href="#"><i class="fab fa-facebook-f"></i></a>
+        <a href="#"><i class="fab fa-twitter"></i></a>
+        <a href="#"><i class="fab fa-instagram"></i></a>
+    </div>
+</footer>
 
-    <!-- Static Footer 4 -->
-    <footer class="footer-4">
-        <nav>
+<h1>Design 3</h1>
+<h2>Composition of Social Media Icons, 4 Navigations & Call to Action </h2>
+<footer class="footer-7">
+    <div class="footer-content">
+        <h2>Explore</h2>
+        <nav class="d3">
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Contact</a></li>
+              <li><a href="">Home</a></li>
+              <li><a href="">About</a></li>
+              <li><a href="">Work</a></li>
+              <li><a href="">Contact</a></li>
             </ul>
-        </nav>
-        <p>&copy; 2024 My Company</p>
+          </nav>
+    </div>
+    <div class="newsletter">
+        <h3>Subscribe to Our Newsletter</h3>
+        <form class="subscribe-form">
+            <input type="email" placeholder="Your Email">
+            <button type="submit">Subscribe</button>
+        </form>
+    </div>
+    <div class="social-media">
+        <a href="#"><i class="fab fa-facebook-f"></i></a>
+        <a href="#"><i class="fab fa-twitter"></i></a>
+        <a href="#"><i class="fab fa-linkedin"></i></a>
+    </div>
     </footer>
 
-    <!-- Static Footer 5 -->
-    <footer class="footer-5">
-        <div class="container">
-            <div class="address">
-                <p>123 Main Street, Anytown, USA</p>
-            </div>
-            <div class="social">
-                <nav>
-                    <ul>
-                        <li><a href="#">LinkedIn</a></li>
-                        <li><a href="#">YouTube</a></li>
-                        <li><a href="#">Pinterest</a></li>
-                    </ul>
-                </nav>
-            </div>
-            <div class="copy">
-                <p>&copy; 2024 My Company</p>
-            </div>
-        </div>
-    </footer>
+<h1>Design 4</h1>
+<h2>Composition of Navigations & Social Media Icons</h2>
+<footer class="footer">
+    <div class="container">
+     <div class="row">
+       <div class="footer-col4">
+         <h4>company</h4>
+         <ul>
+           <li><a href="#">about us</a></li>
+           <li><a href="#">our services</a></li>
+           <li><a href="#">privacy policy</a></li>
+           <li><a href="#">affiliate program</a></li>
+         </ul>
+       </div>
+       <div class="footer-col4">
+         <h4>get help</h4>
+         <ul>
+           <li><a href="#">FAQ</a></li>
+           <li><a href="#">shipping</a></li>
+           <li><a href="#">returns</a></li>
+           <li><a href="#">order status</a></li>
+           <li><a href="#">payment options</a></li>
+         </ul>
+       </div>
+       <div class="footer-col4">
+         <h4>online shop</h4>
+         <ul>
+           <li><a href="#">watch</a></li>
+           <li><a href="#">bag</a></li>
+           <li><a href="#">shoes</a></li>
+           <li><a href="#">dress</a></li>
+         </ul>
+       </div>
+       <div class="footer-col4">
+         <h4>follow us</h4>
+         <div class="social-links">
+           <a href="#"><i class="fab fa-facebook-f"></i></a>
+           <a href="#"><i class="fab fa-twitter"></i></a>
+           <a href="#"><i class="fab fa-instagram"></i></a>
+           <a href="#"><i class="fab fa-linkedin-in"></i></a>
+         </div>
+       </div>
+     </div>
+    </div>
+ </footer>
 
-    <!-- Animated Footer 1 -->
-    <footer class="footer-animated-1">
-        <p>&copy; 2024 My Company</p>
-        <nav>
+<h1>Design 5</h1>
+<h2>Composition of Social Media Icons, 5 Navigations & Copyright</h2>
+<footer class="footer-5">
+    <ul class="social-icon5">
+        <li class="social-icon__item"><a class="social-icon__link" href="#">
+            <ion-icon name="logo-facebook"></ion-icon>
+        </a></li>
+        <li class="social-icon__item"><a class="social-icon__link" href="#">
+            <ion-icon name="logo-twitter"></ion-icon>
+        </a></li>
+        <li class="social-icon__item"><a class="social-icon__link" href="#">
+            <ion-icon name="logo-linkedin"></ion-icon>
+        </a></li>
+        <li class="social-icon__item"><a class="social-icon__link" href="#">
+            <ion-icon name="logo-instagram"></ion-icon>
+        </a></li>
+    </ul>
+    <ul class="menu5">
+        <li class="menu__item"><a class="menu__link" href="#">Home</a></li>
+        <li class="menu__item"><a class="menu__link" href="#">About</a></li>
+        <li class="menu__item"><a class="menu__link" href="#">Services</a></li>
+        <li class="menu__item"><a class="menu__link" href="#">Team</a></li>
+        <li class="menu__item"><a class="menu__link" href="#">Contact</a></li>
+    </ul>
+    <p>&copy;2024 | All Rights Reserved</p>
+</footer>
+
+
+
+<div class="header-page">
+    <h1>Animated Footer Designs</h1>
+</div>
+
+<h1>Design 1</h1>
+<footer class="footer-1">
+    <div class="footer-content">
+        <h2>Follow Us</h2>
+        <div class="d2">
             <ul>
-                <li><a href="#">Privacy Policy</a></li>
-                <li><a href="#">Terms of Service</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#"><i class="fab fa-facebook-f icon"></i></a></li>
+                <li><a href="#"><i class="fab fa-twitter icon"></i></a></li>
+                <li><a href="#"><i class="fab fa-linkedin-in icon"></i></a></li>
+                <li><a href="#"><i class="fab fa-google-plus-g icon"></i></a></li>
             </ul>
-        </nav>
-    </footer>
-
-    <!-- Animated Footer 2 -->
-    <footer class="footer-animated-2">
-        <div class="container">
-            <div class="left">
-                <p>&copy; 2024 My Company</p>
-            </div>
-            <div class="right">
-                <nav>
-                    <ul>
-                        <li><a href="#">Facebook</a></li>
-                        <li><a href="#">Twitter</a></li>
-                        <li><a href="#">Instagram</a></li>
-                    </ul>
-                </nav>
-            </div>
         </div>
-    </footer>
+    </div>
+    <nav class="navbar-footer2">
+        <ul>
+            <li><a href="#" class="hvr-sweep-to-bottom">Home</a></li>
+            <li><a href="#" class="hvr-sweep-to-bottom">Products</a></li>
+            <li><a href="#" class="hvr-sweep-to-bottom">Services</a></li>
+            <li><a href="#" class="hvr-sweep-to-bottom">About Us</a></li>
+            <li><a href="#" class="hvr-sweep-to-bottom">Contact</a></li>
+        </ul>
+    </nav>
+</footer>
 
-    <!-- Animated Footer 3 -->
-    <footer class="footer-animated-3">
-        <p>&copy; 2024 My Company | All Rights Reserved</p>
-    </footer>
+<h1>Design 2</h1>
+<footer class="footer-6">
+    <div class="footer-content">
+        <h2>Get in Touch</h2>
+        <p>Feel free to contact us for any inquiries.</p>
+    </div>
+    <div class="cta-buttons">
+        <a href="#" class="btn btn-primary hvr-sweep-to-right">Subscribe</a>
+        <a href="#" class="btn btn-secondary hvr-sweep-to-right">Shop Now</a>
+    </div>
+    <div class="social-media">
+        <a href="#"><i class="fab fa-facebook-f"></i></a>
+        <a href="#"><i class="fab fa-twitter"></i></a>
+        <a href="#"><i class="fab fa-instagram"></i></a>
+    </div>
+</footer>
 
-    <!-- Animated Footer 4 -->
-    <footer class="footer-animated-4">
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </nav>
-        <p>&copy; 2024 My Company</p>
-    </footer>
+<h1>Design 3</h1>
+<footer class="footer-7">
+<div class="footer-content">
+    <h2>Explore</h2>
+    <nav class="d3-an">
+        <ul>
+          <li><a href="">Home</a></li>
+          <li><a href="">About</a></li>
+          <li><a href="">Work</a></li>
+          <li><a href="">Contact</a></li>
+        </ul>
+      </nav>
+</div>
+<div class="newsletter">
+    <h3>Subscribe to Our Newsletter</h3>
+    <form class="subscribe-form">
+        <input type="email" placeholder="Your Email">
+        <button type="submit">Subscribe</button>
+    </form>
+</div>
+<div class="social-media">
+    <a href="#"><i class="fab fa-facebook-f"></i></a>
+    <a href="#"><i class="fab fa-twitter"></i></a>
+    <a href="#"><i class="fab fa-linkedin"></i></a>
+</div>
+</footer>
 
-    <!-- Animated Footer 5 -->
-    <footer class="footer-animated-5">
-        <div class="container">
-            <div class="address">
-                <p>123 Main Street, Anytown, USA</p>
-            </div>
-            <div class="social">
-                <nav>
-                    <ul>
-                        <li><a href="#">LinkedIn</a></li>
-                        <li><a href="#">YouTube</a></li>
-                        <li><a href="#">Pinterest</a></li>
-                    </ul>
-                </nav>
-            </div>
-            <div class="copy">
-                <p>&copy; 2024 My Company</p>
-            </div>
-        </div>
-    </footer>
+<h1>Design 4</h1>
+<footer class="footer">
+    <div class="container">
+     <div class="row">
+       <div class="footer-col">
+         <h4>company</h4>
+         <ul>
+           <li><a href="#">about us</a></li>
+           <li><a href="#">our services</a></li>
+           <li><a href="#">privacy policy</a></li>
+           <li><a href="#">affiliate program</a></li>
+         </ul>
+       </div>
+       <div class="footer-col">
+         <h4>Get help</h4>
+         <ul>
+           <li><a href="#">FAQ</a></li>
+           <li><a href="#">shipping</a></li>
+           <li><a href="#">returns</a></li>
+           <li><a href="#">order status</a></li>
+           <li><a href="#">payment options</a></li>
+         </ul>
+       </div>
+       <div class="footer-col">
+         <h4>Online shop</h4>
+         <ul>
+           <li><a href="#">watch</a></li>
+           <li><a href="#">bag</a></li>
+           <li><a href="#">shoes</a></li>
+           <li><a href="#">dress</a></li>
+         </ul>
+       </div>
+       <div class="footer-col">
+         <h4>Follow us</h4>
+         <div class="social-links">
+           <a href="#"><i class="fab fa-facebook-f"></i></a>
+           <a href="#"><i class="fab fa-twitter"></i></a>
+           <a href="#"><i class="fab fa-instagram"></i></a>
+           <a href="#"><i class="fab fa-linkedin-in"></i></a>
+         </div>
+       </div>
+     </div>
+    </div>
+ </footer>
+
+
+<h1>Design 5</h1>
+<footer class="footer-5-an">
+    <ul class="social-icon">
+        <li class="social-icon__item"><a class="social-icon__link5" href="#">
+            <ion-icon name="logo-facebook"></ion-icon>
+        </a></li>
+        <li class="social-icon__item"><a class="social-icon__link5" href="#">
+            <ion-icon name="logo-twitter"></ion-icon>
+        </a></li>
+        <li class="social-icon__item"><a class="social-icon__link5" href="#">
+            <ion-icon name="logo-linkedin"></ion-icon>
+        </a></li>
+        <li class="social-icon__item"><a class="social-icon__link5" href="#">
+            <ion-icon name="logo-instagram"></ion-icon>
+        </a></li>
+    </ul>
+    <ul class="menu">
+        <li class="menu__item"><a class="menu__link5" href="#">Home</a></li>
+        <li class="menu__item"><a class="menu__link5" href="#">About</a></li>
+        <li class="menu__item"><a class="menu__link5" href="#">Services</a></li>
+        <li class="menu__item"><a class="menu__link5" href="#">Team</a></li>
+        <li class="menu__item"><a class="menu__link5" href="#">Contact</a></li>
+    </ul>
+    <p>&copy;2024 | All Rights Reserved</p>
+</footer>
+
+<!-- Ionicons Script -->
+<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+
 </body>
 </html>
