--- a/pages/header-gallery/index.html
+++ b/pages/header-gallery/index.html
@@ -3,137 +3,189 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Header Designs</title>
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <a href="../../index.html" class="go-back-link"> <- Go Back </a>
+    <title>Document</title>
+    <link rel="stylesheet" href="../header-gallery/assets/css/style.css">
+    <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
 </head>
 <body>
-    <header class="header-1">
-        <h1>Static Header 1</h1>
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+    <div class="header-page">
+        <h1>Static Header Designs</h1>
+        <a href="../../index.html">Back to Home</a>
+    </div>
 
-    <header class="header-2">
-        <h1>Static Header 2</h1>
-        <img src="./assets/img/GSW-Logo.png" alt="Logo" class="logo">
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Portfolio</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <header class="header-3">
-        <h1>Static Header 3</h1>
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <header class="header-4">
-        <div class="container">
-            <h1>Static Header 4</h1>
-            <nav>
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Gallery</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
-            </nav>
+    <h1>Design #1</h1>
+    <h2>Composition of Logo & 5 Navigation</h2>
+    <section class="design-1">
+        <div class="logo-1">
+        <img src="https://i.pinimg.com/736x/e8/a7/de/e8a7de7a625097b79177cccecffcdeb9.jpg" alt="">
         </div>
-    </header>
-
-    <header class="header-5">
-        <h1>Static Header 5</h1>
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Shop</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
+        <nav class="navbar-1">
+        <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Products</a></li>
+        <li><a href="#">Services</a></li>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Contact</a></li>
+        </ul>
         </nav>
-    </header>
+        </section>
 
-    <header class="header-animated-1">
-        <h1>Animated Header 1</h1>
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+    <h1>Design #2</h1> 
+    <h2>Composition of Logo, 5 Navigation & Log Out Button</h2>
+    <section class="design2">
+        <a href="#" class="logo">Celestiophile</a>
+        <ul class="navbar">
+            <a href="#">Home</a>
+            <a href="#">About</a>
+            <a href="#">Projects</a>
+            <a href="#">Services</a>
+            <a href="#">Contact</a>
+        </ul>
 
-    <header class="header-animated-2">
-        <h1>Animated Header 2</h1>
-        <div class="logo">
-            <img src="./assets/img/OKC-Logo.png" alt="Logo">
+        <a class="contact" href="#"><button class="button-2">Log out</button></a>
+    </section>
+
+    <h1>Design #3</h1>
+    <h2>Composition of Logo, 4 Navigation & Search Button</h2>
+    <nav class="design3">
+        <ul class="menu3">
+        <li><a href="">Home</a></li>
+        <li><a href="">About</a></li>
+        <li><a href="">Services</a></li>
+        <li><a href="">Contact</a></li>
+        </ul>
+        <div class="logo3">Celestiophile</div>
+        <div class="search">
+            <form>
+                <input type="text" placeholder="Search...">
+                <button type="submit">Go</button>
+            </form>
         </div>
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Portfolio</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+    </nav>
 
-    <header class="header-animated-3">
-        <h1>Animated Header 3</h1>
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
+    <h1>Design #4</h1>
+    <h2>Composition of Logo, 4 Navigation</h2>
+    <section class="design4">
+        <nav class="buttons4">
+            <div class="nav-links">
+                <a href="#">Home</a>
+                <a href="#">About</a>
+                <a href="#">Projects</a>
+                <a href="#">Contact</a>
+            </div>
+            <a href="#" class="logo">CELESTIOPHILE</a>
         </nav>
-    </header>
+    </section>
 
-    <header class="header-animated-4">
-        <div class="container">
-            <h1>Animated Header 4</h1>
-            <nav>
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Gallery</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
-            </nav>
+    <h1>Design #5</h1>
+    <h2>Composition of Logo, 7 Navigations wih Icons & Social Media</h2>
+    <section class="design5">
+        <div class="sidebar">
+            <h2>Celestiophile</h2>
+            <ul>
+                <h1> </h1>
+                <li><a href="#"><i class="fas fa-home"></i>Home</a></li>
+                <li><a href="#"><i class="fas fa-user"></i>Profile</a></li>
+                <li><a href="#"><i class="fas fa-address-card"></i>About</a></li>
+                <li><a href="#"><i class="fas fa-project-diagram"></i>Portfolio</a></li>
+                <li><a href="#"><i class="fas fa-blog"></i>Blogs</a></li>
+                <li><a href="#"><i class="fas fa-address-book"></i>Contact</a></li>
+                <li><a href="#"><i class="fas fa-map-pin"></i>Map</a></li>
+            </ul>
+            <div class="social_media">
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+            </div>
         </div>
-    </header>
+    </section>
 
-    <header class="header-animated-5">
-        <h1>Animated Header 5</h1>
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Shop</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+</section>
+
+<div class="header-page">
+    <h1>Animated Header Designs</h1>
+</div>
+
+<h1>Design #1</h1>
+<section class="design-1-an">
+    <div class="logo-grow">
+        <img src="https://i.pinimg.com/736x/01/e3/1a/01e31a1c4bcec1352f6fa9bbf94d20ca.jpg" alt="">
+    </div>
+    <nav class="navbar-1-an">
+    <ul>
+    <li><a href="#">Home</a></li>
+    <li><a href="#">Products</a></li>
+    <li><a href="#">Services</a></li>
+    <li><a href="#">About Us</a></li>
+    <li><a href="#">Contact</a></li>
+    </ul>
+    </nav>
+    </section>
+
+<h1>Design #2</h1>
+<section class="design2">
+    <a href="#" class="logo2-an">Celestiophile</a>
+    <div class="buttons2-an">
+        <a class="rainbow-1" href="#">Home</a>
+        <a class="rainbow-2" href="#">About</a>
+        <a class="rainbow-3" href="#">Projects</a>
+        <a class="rainbow-4" href="#">Services</a>
+        <a class="rainbow-5" href="#">Contact</a>
+    </div>
+
+    <a class="contact" href="#"><button class="button-2-an">Log out</button></a>
+</section>
+
+<h1>Design #3</h1>
+<nav class="design3">
+    <ul class="menu3">
+        <li><a class="menu-link" href="#">Home</a></li>
+        <li><a class="menu-link" href="#">About</a></li>
+        <li><a class="menu-link" href="#">Services</a></li>
+        <li><a class="menu-link" href="#">Contact</a></li>
+    </ul>
+    <div class="logo3-an hvr-float-shadow">Celestiophile</div>
+    <div class="search">
+        <form>
+            <input type="text" placeholder="Search...">
+            <button type="submit">Go</button>
+        </form>
+    </div>
+</nav>
+
+<h1>Design #4</h1>
+<div class="design4">
+  <nav class="buttons4-an">
+    <div class="nav-links-an">
+      <a href="#">Home</a>
+      <a href="#">About</a>
+      <a href="#">Projects</a>
+      <a href="#">Contact</a>
+    </div>
+    <a href="#" class="logo4-an">CELESTIOPHILE</a>
+  </nav>
+</div>
+
+<h1>Design #5</h1>
+<section class="design5-an">
+    <div class="sidebar-an">
+        <h2>Celestiophile</h2>
+        <ul>
+            <h1> </h1>
+            <li><a href="#"><i class="fas fa-home"></i> Home</a></li>
+            <li><a href="#"><i class="fas fa-user"></i> Profile</a></li>
+            <li><a href="#"><i class="fas fa-address-card"></i> About</a></li>
+            <li><a href="#"><i class="fas fa-project-diagram"></i> Portfolio</a></li>
+            <li><a href="#"><i class="fas fa-blog"></i> Blogs</a></li>
+            <li><a href="#"><i class="fas fa-address-book"></i> Contact</a></li>
+            <li><a href="#"><i class="fas fa-map-pin"></i> Map</a></li>
+        </ul>
+        <div class="social_media">
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+        </div>
+    </div>
+</section>
 </body>
 </html>
