refactor(home): changed title

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div class="container">
     <h1>Seatwork 3</h1>
     <h2>Header and Footer</h2>
-    <p>A collection of header and footer designs, featuring 5 examples each of static and dynamic headers, as well as 5 examples each of static and dynamic footers.</p>
+    <p>A Collection of Header and Footer Designs, Featuring 5 Examples each of Static and Dynamic Headers, as well as 5 Examples Each of Static and Dynamic Footers.</p>
 <div class="buttons">
     <a href="./pages/header-gallery/index.html" class="btn">View Headers</a>
     <a href="./pages/footer-gallery/index.html" class="btn">View Footers</a>
