fix(pfooter): fixed the bg color

--- a/pages/footer-gallery/index.html
+++ b/pages/footer-gallery/index.html
@@ -305,7 +305,7 @@
         <li class="menu__item"><a class="menu__link5" href="#">Home</a></li>
         <li class="menu__item"><a class="menu__link5" href="#">About</a></li>
         <li class="menu__item"><a class="menu__link5" href="#">Services</a></li>
-        <li class="menu__item"><a class="menu__link5" href="#">Team</a></li>
+        <li class="menu__item"><a class="menu__link5" href="#">Teams</a></li>
         <li class="menu__item"><a class="menu__link5" href="#">Contact</a></li>
     </ul>
     <p>&copy;2024 | All Rights Reserved</p>
